--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,21 @@ body::-webkit-scrollbar {
     width: 100%;
     transition: top 0.3s ease-in-out; /* Sanfte Bewegung */
     z-index: 9999; /* Stellt sicher, dass die Navbar immer im Vordergrund bleibt */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* button grün bei hover */
+.btn-secondary:hover {
+    box-shadow: 0 0 15px 5px rgba(40, 167, 69, 0.5); /* Grüner äußerer Schatten */
+    border-color: #28a745; /* Optional */
+  }
 
 /* Snap-Scrolling konfigurieren */
 body {
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
     scroll-padding-top: 30px; /* Puffer oben für das erste Element */
-    background-color: #ededed!important;
+    background-color: whitesmoke!important;
 }
 
 /* Sektionen mit Scroll-Snap konfigurieren */
@@ -309,17 +315,17 @@ body {
 
 /* Erste Zeile: Sehr langsam */
 .text-row-1 {
-    animation: scroll-text 40s linear infinite;
+    animation: scroll-text 45s linear infinite;
 }
 
 /* Zweite Zeile: Mittel langsam, in die andere Richtung */
 .text-row-2 {
-    animation: scroll-text-reverse 50s linear infinite;
+    animation: scroll-text-reverse 55s linear infinite;
 }
 
 /* Dritte Zeile: Etwas schneller */
 .text-row-3 {
-    animation: scroll-text 45s linear infinite;
+    animation: scroll-text 50s linear infinite;
 }
 
 /* Keyframes für die Bewegung (links nach rechts) */
@@ -344,6 +350,14 @@ body {
 /* ende text scroll */
 
 /* cards */
+.shadow-inset {
+    box-shadow: inset 0 -20px 30px rgba(0,0,0,0.15),
+                inset 0 20px 30px rgba(0,0,0,0.15);
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(0) grayscale(100%) brightness(0) sepia(0);
+}
 .carousel{
     margin-top: 5%!important;
 }
@@ -356,8 +370,9 @@ body {
     height: 60vh;
     object-fit: cover; /* sorgt dafür, dass das Bild den Container richtig ausfüllt */
 }
-
-
+.carousel-caption {
+    color: black !important;
+}
 .all-products-btn {
     position: absolute;
     bottom: 10px;
@@ -388,7 +403,6 @@ body {
 }
 /* cards */
 
-
 /* kontakt */
 .kontakt{
     
@@ -412,16 +426,95 @@ body {
 /* ende kontakt */
 
 
+/* schlauchmanschette */
+@media (max-width: 1300px) {
+.schlauchmanschette{
+    margin-top: 10%;
+    align-items: center;}
+}
+
+@media (max-width: 767px) {
+.schlauchmanschette{
+    margin: 5%;}
+    }
+
+    @media (max-width: 767.98px) {
+        .keyframe_center {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+        }
+      }
+      img.img-fluid-hero1 {
+        transition: transform 0.3s ease;
+      }
+      
+      img.img-fluid-hero1:hover {
+        transform: scale(1.2);
+      }    
+section .card {
+    transition: all 0.3s ease-in-out;
+  }
+  
+  section .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  section .col-md-4 {
+    padding: 1rem;
+  }
+  
+  @media (max-width: 767px) {
+    section .col-md-4 {
+      margin-bottom: 1.5rem;
+    }
+  }
+  section {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+  
+  .card-body {
+    padding: 3rem;
+    background-color: #f9f9f9;
+  }
+  
+  .card {
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 2rem;
+  }
+  
+  .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  @media (max-width: 767px) {
+    .card-body {
+      padding: 2rem;
+    }
+  
+    .col-md-4, .col-sm-6 {
+      margin-bottom: 2rem;
+    }
+  }
+/* ende schlauchmanschette */
+
+
 /* footer */
 .footer {
     background-color: white;
-    border-top: 1px solid white;
-    margin-top: 40px;
+    padding-top: 30px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Stärkerer Schatten mit höherer Deckkraft */
+    margin-top: -30px;
 }
 
 
 .footer-logo {
-    height: 40px;
+    height: 30px;
 }
 .footer a {
     color: black;
@@ -435,6 +528,9 @@ body {
 }
 
 /* responsive footer */
+.footer{
+    padding-top: 30px;
+}
 @media (max-width: 770px) {
     .footer .container {
         flex-direction: column;
@@ -456,3 +552,11 @@ body {
 }
 
 /* ende footer */
+
+
+/* schlauchmanschette */
+.schlauchmanschette_start{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    max-width: 100% !important;
+    }
